# practice

./: README.md  mallware.ipynb  out_tf2.txt  train_traffic_cnn.ipynb  train_traffic_cnn.py
MNIST/: README.md  requirements.txt
MNIST/cpp/: CMakeLists.txt  build.sh
MNIST/cpp/src/: main.cpp
MNIST/data/: make_sample.py
MNIST/model/: model.nm8  model.onnx
MNIST/notebook/: train_export.ipynb
Mallware/: requirements.txt
Mallware/cpp/: CMakeLists.txt  build.sh  inference
Mallware/cpp/src/: main.cpp
Mallware/data/: sample.raw
Mallware/model/: model.onnx
Mallware/notebook/: make_sample.ipynb  train_export.ipynb
dataset/toolkit/: prepare_data.py
mallware/: build.sh  inference.cpp  model.nm8
mallware/nm8/: CMakeLists.txt  inference.cpp
onnx-test/: test.py
